--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,15 @@
 <head>
 </head>
 <body>
-  <h1> {{ title }} {{ user_name }}</h1>
+  <h1> {{ title }} is working!</h1>
+  {% for obj in object_list %}
+
+    <a href='/posts/detail/{{ obj.id }}'>{{ obj.title }}</a> <br>
+    {{ obj.content }} <br>
+    {{ obj.timestamp }} <br>
+    {{ obj.updated }} <br>
+    {{ obj.id }} <br>
+    <br>
+  {% endfor %}
 </body>
 </html>
