Using url reverse and namespace

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 <body>
   <h1> {{ title }} is working!</h1>
   {% for obj in object_list %}
-
-    <a href='{% url "detail" post_id=obj.id %}'>{{ obj.title }}</a> <br>
+    {% url "posts:detail" post_id=obj.id %}
+    <a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> <br>
     {{ obj.content }} <br>
     {{ obj.timestamp }} <br>
     {{ obj.updated }} <br>
