--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -7,7 +7,7 @@
   <h1>Form</h1>
   <form method="POST" action="">{%csrf_token%}
     {{ form.as_p }}
-    <input type="submit" value="Create Post" />
+    <input type="submit" value="{{submit_btn_text}}" />
   </form>
 </body>
 </html>
