--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -3,6 +3,13 @@
 <head>
 </head>
 <body>
+  {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+  {% endif %}
   <h1> {{ instance.title }}</h1>
   {{ instance.title }} <br>
   {{ instance.content }} <br>
