--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,13 +1,9 @@
-<!--DOCTYPE HTML-->
+ {% extends "base.html" %}
 
-<html>
-<head>
-</head>
-<body>
+ {% block content %}
   <h1>Form</h1>
   <form method="POST" action="">{%csrf_token%}
     {{ form.as_p }}
     <input type="submit" value="{{submit_btn_text}}" />
   </form>
-</body>
-</html>
+{% endblock %}
