--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,15 @@
 <html>
 <head></head>
 <body>
+  <div class="messages">
+    {% if messages %}
+      <ul class="messages">
+          {% for message in messages %}
+          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+          {% endfor %}
+      </ul>
+    {% endif %}
+  </div>
   <div class='container'>
     {% block content %}
       <h1> {{ title }} is working!</h1>
