--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,20 +1,13 @@
 <!--DOCTYPE HTML-->
-<html>
-<head>
-</head>
-<body>
-  {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-  {% endif %}
-  <h1> {{ instance.title }}</h1>
-  {{ instance.title }} <br>
-  {{ instance.content }} <br>
-  {{ instance.timestamp }} <br>
-  {{ instance.updated }} <br>
-  {{ instance.id }} <br>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+
+<h1> {{ instance.title }}</h1>
+{{ instance.title }} <br>
+{{ instance.content }} <br>
+{{ instance.timestamp }} <br>
+{{ instance.updated }} <br>
+{{ instance.id }} <br>
+
+{% endblock content%}
