Refactoring base template and create post list template

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,11 @@
 <!--DOCTYPE HTML-->
 <html>
-<head></head>
+<head>
+<title>{%block head_title%} Try Django 1.9 {%endblock head_title%}</title>
+<style>
+{%block style%} {%endblock style%}
+</style>
+</head>
 <body>
   <div class="messages">
     {% if messages %}
@@ -13,16 +18,7 @@
   </div>
   <div class='container'>
     {% block content %}
-      <h1> {{ title }} is working!</h1>
-      {% for obj in object_list %}
-        {% url "posts:detail" post_id=obj.id %}
-        <a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a> <br>
-        {{ obj.content }} <br>
-        {{ obj.timestamp }} <br>
-        {{ obj.updated }} <br>
-        {{ obj.id }} <br>
-      {% endfor %}
-        <br>
+
     {% endblock content %}
   </div>
 </body>
