--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,9 +1,13 @@
 <!--DOCTYPE HTML-->
 {% extends "base.html" %}
 
+{% block head_title %}
+  {{ instance.title }} | {{ block.super }}
+{% endblock head_title %}
+
 {% block content %}
 
-<h1> {{ instance.title }}</h1>
+<h1> {{ title }}</h1>
 {{ instance.title }} <br>
 {{ instance.content }} <br>
 {{ instance.timestamp }} <br>
